fix: socket cut off fix

--- a/src/web/ui/editor/FlowEditor/styles.css
+++ b/src/web/ui/editor/FlowEditor/styles.css
@@ -22,7 +22,7 @@
   border: 0 !important;
   box-shadow: none !important;
   padding: 0 !important;
-  contain: layout style paint;
+  contain: layout style;
 }
 
 .react-flow__node:not(.react-flow__node-frame) {
